--- a/settings.json
+++ b/settings.json
@@ -7,9 +7,9 @@
 "autocomposing": false,
 "autorecording": false,
 "BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
+"NomorOwner":"918006025825", 
+"NomorOwner2":"+918006025825", 
+"NamaOwner":"Sirius", 
 "Dana":"6909137213", 
 "Pulsa":"6909137213", 
 "Ovo":"6909137213", 
